[gd_scene load_steps=25 format=3 uid="uid://5aintggxawva"]

[ext_resource type="Texture2D" uid="uid://ceqhg6l2givtp" path="res://spliced_1128x658.png" id="1_ohexs"]
[ext_resource type="Script" uid="uid://c83feirxcvbyn" path="res://settings.gd" id="1_tk3m0"]
[ext_resource type="FontFile" uid="uid://cocws713ma2us" path="res://GrapeSoda.ttf" id="2_1k4ii"]
[ext_resource type="Texture2D" uid="uid://c66f00r8fv2la" path="res://grabber.png" id="3_82xqq"]
[ext_resource type="StyleBox" uid="uid://c6hf4faxfr4mh" path="res://Focus.tres" id="4_7eiv2"]
[ext_resource type="Script" uid="uid://dgaftelpgbl08" path="res://h_slider.gd" id="4_tk3m0"]
[ext_resource type="AudioStream" uid="uid://bkn5rowrl0vb7" path="res://addons/down.mp3" id="4_y43lv"]
[ext_resource type="AudioStream" uid="uid://fe1j22om65md" path="res://addons/up.mp3" id="5_7eiv2"]
[ext_resource type="StyleBox" uid="uid://cwcsdfet6yano" path="res://Hover.tres" id="5_tk3m0"]
[ext_resource type="StyleBox" uid="uid://c8n30xx5om1u7" path="res://Pressed.tres" id="6_fdp2d"]
[ext_resource type="AudioStream" uid="uid://pjk74tt8fmn3" path="res://DoubleClick.wav" id="6_tk3m0"]
[ext_resource type="StyleBox" uid="uid://cy1v0kqx0ntj4" path="res://Normal.tres" id="7_e0y8d"]
[ext_resource type="AudioStream" uid="uid://xmo10hd1nvcs" path="res://6. plucky park.mp3" id="7_fdp2d"]
[ext_resource type="AudioStream" uid="uid://dlljqga2kvmwm" path="res://7. sarcastic shop.mp3" id="8_e0y8d"]
[ext_resource type="AudioStream" uid="uid://dsy8gu2fbywio" path="res://8. sassy shells.mp3" id="9_c6byp"]
[ext_resource type="AudioStream" uid="uid://dkr3q1xjw1acf" path="res://10. nocturnal knoll.mp3" id="10_iii5v"]

[sub_resource type="Theme" id="Theme_xyjnm"]
RichTextLabel/font_sizes/normal_font_size = 95
RichTextLabel/fonts/normal_font = ExtResource("2_1k4ii")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enj72"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ra0u"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsyli"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.858824, 0.772549, 0.65098, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.980392, 0.909804, 0.792157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_qe05g"]
HSlider/constants/center_grabber = 0
HSlider/constants/grabber_offset = 0
HSlider/icons/grabber = ExtResource("3_82xqq")
HSlider/icons/grabber_disabled = ExtResource("3_82xqq")
HSlider/icons/grabber_highlight = ExtResource("3_82xqq")
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_enj72")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_5ra0u")
HSlider/styles/slider = SubResource("StyleBoxFlat_wsyli")

[sub_resource type="Theme" id="Theme_c6byp"]
Label/font_sizes/font_size = 64
Label/fonts/font = ExtResource("2_1k4ii")

[sub_resource type="Theme" id="Theme_iii5v"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 64
Button/fonts/font = ExtResource("2_1k4ii")

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_3d8ot"]
shuffle = true
stream_count = 4
stream_0 = ExtResource("7_fdp2d")
stream_1 = ExtResource("8_e0y8d")
stream_2 = ExtResource("9_c6byp")
stream_3 = ExtResource("10_iii5v")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_tk3m0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 660.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Control"]
self_modulate = Color(1, 1, 1, 0.596078)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 658.0
texture = ExtResource("1_ohexs")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextureRect"]
custom_minimum_size = Vector2(865.32, 128.235)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -432.66
offset_top = 9.0
offset_right = 432.66
offset_bottom = 137.235
grow_horizontal = 2
pivot_offset = Vector2(432.66, 75.495)
theme = SubResource("Theme_xyjnm")
text = "Settings"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -293.0
offset_top = 150.0
offset_right = 293.0
offset_bottom = 565.0
grow_horizontal = 2
theme = SubResource("Theme_qe05g")
theme_override_constants/separation = 34

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(144.64, 0)
layout_mode = 2
theme = SubResource("Theme_c6byp")
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(593.23, 0)
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("4_tk3m0")
bus_name = "SFX"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/TextureRect/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/TextureRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_c6byp")
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/TextureRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(593.23, 0)
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("4_tk3m0")
bus_name = "Music"

[node name="down" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_y43lv")
volume_db = -10.0
bus = &"SFX"

[node name="up" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("5_7eiv2")
volume_db = -10.0
bus = &"SFX"

[node name="both" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("6_tk3m0")
volume_db = -10.0
bus = &"SFX"

[node name="QuitToMenu" type="Button" parent="Control"]
offset_left = 205.5
offset_top = 346.0
offset_right = 946.5
offset_bottom = 422.0
pivot_offset = Vector2(370.505, 38)
theme = SubResource("Theme_iii5v")
theme_override_styles/focus = ExtResource("4_7eiv2")
theme_override_styles/hover_pressed = ExtResource("5_tk3m0")
theme_override_styles/hover = ExtResource("5_tk3m0")
theme_override_styles/pressed = ExtResource("6_fdp2d")
theme_override_styles/normal = ExtResource("7_e0y8d")
text = "quit to menu"

[node name="QuitToMenu2" type="Button" parent="Control"]
offset_left = 205.5
offset_top = 456.0
offset_right = 946.5
offset_bottom = 532.0
pivot_offset = Vector2(370.505, 38)
theme = SubResource("Theme_iii5v")
theme_override_styles/focus = ExtResource("4_7eiv2")
theme_override_styles/hover_pressed = ExtResource("5_tk3m0")
theme_override_styles/hover = ExtResource("5_tk3m0")
theme_override_styles/pressed = ExtResource("6_fdp2d")
theme_override_styles/normal = ExtResource("7_e0y8d")
text = "quit to desktop"

[node name="menumusic" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_3d8ot")
volume_db = -5.0
autoplay = true
bus = &"Music"

[connection signal="value_changed" from="Control/TextureRect/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Control/TextureRect/VBoxContainer/HBoxContainer2/HSlider" to="Control/TextureRect/VBoxContainer/HBoxContainer/HSlider" method="_on_h_slider_value_changed"]
[connection signal="button_down" from="Control/QuitToMenu" to="." method="_on_quit_to_menu_button_down"]
[connection signal="button_up" from="Control/QuitToMenu" to="." method="_on_quit_to_menu_button_up"]
[connection signal="pressed" from="Control/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="button_down" from="Control/QuitToMenu2" to="." method="_on_quit_to_menu_2_button_down"]
[connection signal="button_up" from="Control/QuitToMenu2" to="." method="_on_quit_to_menu_2_button_up"]
[connection signal="pressed" from="Control/QuitToMenu2" to="." method="_on_quit_to_menu_2_pressed"]
